# cabbage3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  commit.py  license.md  listExamples.py  vcpkg.json
cmake/: CabbageAUv2Effect.cmake  CabbageAUv2Synth.cmake  CabbageApp.cmake  CabbageStandaloneApp.cmake  CabbageVSCodeService.cmake  CabbageVSCodeServiceApp.cmake  CabbageVST3Effect.cmake  CabbageVST3Synth.cmake  FindCSOUND.cmake  cabbage_project.cmake  cabbage_version.cmake  fetch_dependencies.cmake  fetch_dependencies_utils.cmake  fetch_github_dependency.cmake  init_vcpkg.cmake
config/: Cabbage-ios.xcconfig  Cabbage-mac.xcconfig  Cabbage-web.mk
example/: CabbagePluginEffect.csd  index.html  main.js  propertyPanel.js  utils.js  widgetWrapper.js  widgets.js
icabbage/: .gitmodules  iPlugPatch.patch  iplug.patch  iplug2.patch
icabbage/cabbage/: CMakeLists.txt  Cabbage.cpp  CabbageProcessor.cpp  CabbageProcessor.h  CabbageWidgetDescriptors.h  ICabbage.cpp  ICabbage.h  ICabbage.sln  README.md  config.h  generateProject.sh  packages.config  updatePlist.sh
icabbage/cabbage/APP/: CabbageAPP_dialog.cpp  CabbageAPP_host.cpp  CabbageAPP_host.h  CabbageAPP_main.cpp
icabbage/cabbage/CabbageApp/: CabbageAPP_dialog.cpp  CabbageAPP_host.cpp  CabbageAPP_host.h  CabbageAPP_main.cpp
icabbage/cabbage/WebView/: IPlugWebViewEditorDelegate.mm
icabbage/cabbage/config/: Cabbage-win.props  ICabbage-ios.xcconfig  ICabbage-mac.xcconfig  ICabbage-web.mk  ICabbage-win.props
icabbage/cabbage/example/CabbagePluginEffect/: CabbagePluginEffect.csd
icabbage/cabbage/installer/: Cabbage.iss  ICabbage.iss  ICabbage.pkgproj  changelog.txt  license.rtf  readme-osx.rtf  readme-win.rtf
icabbage/cabbage/projects/: Cabbage-app.vcxproj  Cabbage-app.vcxproj.filters  Cabbage-vst2.vcxproj.filters  Cabbage-vst3.vcxproj.filters  ICabbage-aax.vcxproj  ICabbage-aax.vcxproj.filters  ICabbage-app.vcxproj  ICabbage-app.vcxproj.filters  ICabbage-vst2.vcxproj  ICabbage-vst2.vcxproj.filters  ICabbage-vst3.vcxproj  ICabbage-vst3.vcxproj.filters  ICabbage-wam-controller.mk  ICabbage-wam-processor.mk
icabbage/cabbage/projects.bak/: Cabbage-aax.vcxproj  Cabbage-aax.vcxproj.filters  Cabbage-vst3.vcxproj  Cabbage-wam-controller.mk
icabbage/cabbage/projects.bak/Cabbage-iOS.xcodeproj/: project.pbxproj
icabbage/cabbage/projects.bak/Cabbage-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-AUv3Framework.xcscheme
icabbage/cabbage/projects.bak/Cabbage-macOS.xcodeproj/xcshareddata/xcschemes/: macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-VST2.xcscheme
icabbage/cabbage/projects/Cabbage-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme
icabbage/cabbage/projects/Cabbage-macOS.xcodeproj/: project.pbxproj
icabbage/cabbage/projects/Cabbage-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  macOS-APP with AUv3.xcscheme  macOS-VST3 (Distributed).xcscheme  macOS-VST3.xcscheme
icabbage/cabbage/projects/ICabbage-iOS.xcodeproj/: project.pbxproj
icabbage/cabbage/projects/ICabbage-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
icabbage/cabbage/projects/ICabbage-macOS.xcodeproj/: project.pbxproj
icabbage/cabbage/projects/ICabbage-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  VST3 Controller Library.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-VST2.xcscheme  macOS-VST3 (Distributed).xcscheme  macOS-VST3.xcscheme
icabbage/cabbage/resources/: AUv3Framework.h  Cabbage-VST2-Info.plist  Cabbage-VST3-Info.plist  Cabbage-macOS-MainMenu.xib  ICabbage-AAX-Info.plist  ICabbage-Pages.xml  ICabbage-VST2-Info.plist  ICabbage-iOS-AUv3-Info.plist  ICabbage-iOS-Info.plist  ICabbage-iOS-LaunchScreen.storyboard  ICabbage-iOS-MainInterface.storyboard  ICabbage-macOS-AUv3-Info.plist  ICabbage-macOS-AUv3Framework-Info.plist  ICabbage-macOS-Info.plist  ICabbage-macOS-MainMenu.xib  IPlugAUViewController_vICabbage.xib  icon.icns  main.rc  main.rc_mac_dlg
icabbage/cabbage/resources/untitled folder/: CabbageApp-AAX-Info.plist  CabbageApp-AU-Info.plist  CabbageApp-VST3-Info.plist  CabbageApp-iOS-AUv3-Info.plist  CabbageApp-iOS-LaunchScreen.storyboard  CabbageApp-macOS-Info.plist  CabbageApp-macOS-MainMenu.xib
icabbage/cabbage/scripts/: make_zip.py  makedist-mac.sh  makedist-web.sh  makedist-win.bat  prepare_resources-ios.py  prepare_resources-mac.py  update_installer_version.py  update_version.py
icabbage/cabbage/src/: .gitignore  Cabbage.cpp  Cabbage.h  CabbageColours.h  CabbageParser.h  CabbageProcessor.cpp  CabbageProcessor.h  CabbageServer.cpp  CabbageUtils.h  CabbageWidgetDescriptors.h  config.h
icabbage/cabbage/src.bak0/: CabbageParser.h  CabbageProcessor.cpp  CabbageProcessor.h  CabbageServer.h  CabbageUtils.h
icabbage/cabbage/src.bak0/opcodes/: CabbageGetOpcodes.h
icabbage/cabbage/src.bak1/: CabbageParser.h  CabbageProcessor.cpp  CabbageProcessor.h  CabbageServer.cpp  CabbageWidgetDescriptors.h
icabbage/cabbage/src.bak1/opcodes/: CabbageOpcodes.h  CabbageSetOpcodes.cpp
icabbage/cabbage/src.bak1/webView/: CabbageEditorDelegate.cpp  CabbageEditorDelegate.h  IPlugWebView.h
icabbage/cabbage/src/app/: CabbageAPP.h  CabbageAPP_dialog.cpp  CabbageAPP_host.cpp  CabbageAPP_host.h  CabbageAPP_main.cpp
icabbage/cabbage/src/opcodes/: CabbageGetOpcodes.cpp  CabbageGetOpcodes.h  CabbageOpcodes.h  CabbageProfilerOpcodes.cpp  CabbageProfilerOpcodes.h  CabbageSetOpcodes.cpp  CabbageSetOpcodes.h
icabbage/cabbage/src/webView/: CabbageEditorDelegate.cpp  CabbageEditorDelegate.h  CabbageEditorDelegate.mm  IPlugWebView.cpp  IPlugWebView.h  IPlugWebView.mm  IPlugWebViewEditorDelegate.h
installer/: Cabbage.pkgproj
resources/: Cabbage-Pages.xml  Cabbage-iOS-Info.plist  Cabbage-iOS-MainInterface.storyboard  CabbageAUV2Effect-AU-Info.plist  CabbageAUV2Synth-AU-Info.plist  CabbageApp-macOS-Info.plist  CabbageVSCodeService-macOS-Info.plist  CabbageVST3Effect-VST3-Info.plist  (+2 more)
(+127 files in other folders)
